# mc-session-changer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
injector/: Cargo.toml
injector/src/: main.rs
libs/: jnihook.lib
src/: account.rs  async_runtime.rs  auth.rs  jni_hook.rs  jvm.rs  lib.rs  mappings.rs
src/core/: cleanup.rs  custom_payload.rs  hwid.rs  jvm_analyzer.rs  logging.rs  mod.rs  sound.rs  state.rs
src/core/packets/: customnpcs.rs  dwcity.rs  dwquests.rs  mod.rs  reader.rs  writer.rs
src/graphics/: context.rs  icon_renderer.rs  mod.rs  netlog.rs  opengl.rs  renderer.rs  svg_icons.rs
src/hooks/: jhook.rs  mod.rs  opengl.rs
src/hooks/packet/: chat_hook.rs  game_data_hook.rs  hwid_hook.rs  mod.rs  mod_list_hook.rs  packet_read_hook.rs  packet_write_hook.rs  utils.rs  write_hook.rs
src/input/: clipboard.rs  keyboard.rs  mod.rs  mouse.rs  window_proc.rs
src/ui/: account_manager.rs  authenticator.rs  jvm_analyzer.rs  main_window.rs  mod.rs  notification_manager.rs  notifications.rs  packet_analyzer.rs  session_window.rs  state.rs
src/utils/: hwid.rs  mod.rs  safe_wrappers.rs
