[package]
name = "mc-session-changer"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
egui = "0.32.0"
egui_glow = { version = "0.32.0", features = ["winit"] }
glow = "0.16.0"
retour = "0.3.1"
once_cell = "1.19"
parking_lot = "0.12"
backtrace = "0.3.75"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
iced-x86 = "1.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[lints.rust]
unsafe_op_in_unsafe_fn = "allow"


[dependencies.winapi]
version = "0.3.9"
features = ["wincon", "basetsd", "winuser", "psapi", "windef", "minwindef", "memoryapi", "tlhelp32", "winnt", "ntdef", "errhandlingapi", "handleapi", "libloaderapi", "processthreadsapi", "winbase", "impl-default", "securitybaseapi", "wow64apiset", "wingdi", "synchapi"]