[package]
name = "mc-session-changer"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
egui = "0.32.0"
egui_glow = { version = "0.32.0", features = ["winit"] }
glow = "0.16.0"
retour = { version = "0.3.1", features = ["static-detour"] }
parking_lot = "0.12"
backtrace = "0.3.75"
tracing-subscriber = { version ="0.3.19", features = ["env-filter", "chrono"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = "0.11.4"
resvg = "0.45.1"
usvg = "0.45.1"

[lints.rust]
unsafe_op_in_unsafe_fn = "allow"

[dependencies.winapi]
version = "0.3.9"
features = ["wincon", "basetsd", "winuser", "psapi", "windef", "minwindef", "memoryapi", "tlhelp32", "winnt", "ntdef", "errhandlingapi", "handleapi", "libloaderapi", "processthreadsapi", "winbase", "impl-default", "securitybaseapi", "wow64apiset", "wingdi", "synchapi"]