[package]
name = "mc-session-changer"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[workspace]
members = [
    ".",
    "injector"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
jni = "0.21.1"
egui = "0.32.0"
egui_extras = "0.32.0"
egui_glow = { version = "0.32.0", features = ["winit"] }
glow = "0.16.0"
retour = { version = "0.3.1", features = ["static-detour"] }
parking_lot = "0.12"
backtrace = "0.3.75"
tracing-subscriber = { version ="0.3.19", features = ["env-filter", "chrono"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
tiny-skia = "0.11.4"
resvg = "0.45.1"
usvg = "0.45.1"
once_cell = "1.21.3"
cipher = "0.4.4"
des = "0.8"
ecb = { version = "0.1.2", features = ["block-padding", "std"] }
block-padding = "0.3"
base64 = "0.22.1"
rand = { version = "0.8", features = ["std"] }
libffi = "3"
time = "0.3.44"
uuid = { version = "1.18.1", features = ["v4"] }
paste = "1.0.15"


[lints.rust]
unsafe_op_in_unsafe_fn = "allow"


[dependencies.winapi]
version = "0.3.9"
features = [
    "excpt",
    "wincon",
    "basetsd",
    "winuser",
    "psapi",
    "windef",
    "minwindef",
    "memoryapi",
    "tlhelp32",
    "winnt",
    "ntdef",
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "processthreadsapi",
    "winbase",
    "impl-default",
    "securitybaseapi",
    "wow64apiset",
    "wingdi",
    "synchapi",
    "dbghelp",
]